[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nutalert"
version = "1.1.0"
description = "nutalert ups monitoring and alert system"
authors = ["Rasool Fatemi <rmfatemi@gmail.com>"]
readme = "README.md"

packages = [
    { include = "nutalert" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pyyaml = ">=6.0"
requests = ">=2.28.0"
apprise = "^1.9.3"
gradio = "^5.33.1"
plotly = "^6.1.2"
nicegui = "^2.19.0"

[tool.poetry.scripts]
nutalert = "nutalert.server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pre-commit = "^4.2.0"
deptry = "^0.23.0"

[tool.black]
target-version = ["py311"]
preview = true
line-length = 120

[tool.ruff]
target-version = "py311"
line-length = 120
include = [
    "nutalert/**/*.py",
    "*.py"
]
