[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "nutalert"
version = "1.2.0"
description = "nutalert ups monitoring and alert system"
authors = [
    {name = "Rasool Fatemi", email = "rmfatemi@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyyaml>=6.0",
    "apprise>=1.9.3",
    "plotly>=6.1.2",
    "nicegui>=2.19.0",
    "pydantic>=2.11.5",
]

[project.scripts]
nutalert = "nutalert.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=4.2.0",
    "deptry>=0.23.0",
]

[tool.black]
target-version = ["py311"]
preview = true
line-length = 120

[tool.ruff]
target-version = "py311"
line-length = 120
include = [
    "nutalert/**/*.py",
    "*.py"
]
